--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
   "name": "linter-scss-lint",
   "main": "./lib/init",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "linter-package": true,
   "description": "Linter plugin for SCSS, using scss-lint",
-  "activationEvents": ["linter-scss-lint:toggle"],
+  "activationEvents": [
+    "linter-scss-lint:toggle"
+  ],
   "repository": "https://github.com/AtomLinter/linter-scss-lint",
   "license": "MIT",
   "engines": {
     "atom": ">0.50.0"
   },
-  "dependencies": {
-  }
+  "dependencies": {}
 }
