--- a/package.json
+++ b/package.json
@@ -1,13 +1,19 @@
 {
   "name": "linter-scss-lint",
   "main": "./lib/init",
-  "version": "1.0.5",
-  "linter-package": true,
+  "version": "1.1.0",
   "description": "Lint SCSS on the fly, using scss-lint",
   "repository": "https://github.com/AtomLinter/linter-scss-lint",
   "license": "MIT",
   "engines": {
     "atom": ">0.50.0"
   },
-  "dependencies": {}
+  "dependencies": {},
+  "providedServices": {
+    "linter": {
+      "versions": {
+        "1.1.0": "provideLinter"
+      }
+    }
+  }
 }
