--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
     "atom": ">=1.0.0"
   },
   "dependencies": {
-    "atom-linter": "^3.2.0"
+    "atom-linter": "^3.2.0",
+    "atom-package-deps": "^2.0.2"
   },
+  "package-deps": [
+    "linter"
+  ],
   "providedServices": {
     "linter": {
       "versions": {
