--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
   },
   "devDependencies": {
     "coffeelint": "^1.15.0",
-    "eslint": "^2.5.3",
+    "eslint": "^2.7.0",
     "eslint-config-airbnb": "^7.0.0",
-    "eslint-plugin-react": "^4.2.3"
+    "eslint-plugin-jsx-a11y": "^0.6.2",
+    "eslint-plugin-react": "^4.3.0"
   },
   "package-deps": [
     "linter"
