--- a/.travis.yml
+++ b/.travis.yml
@@ -1,27 +1,52 @@
+### Project specific config ###
 language: ruby
-rvm:
-  - 2.2.3
 
-os:
-  - linux
-  - osx
+matrix:
+  include:
+    - os: linux
+      rvm: 2.2.3
+      env: ATOM_CHANNEL=stable
+      before_install:
+        # Installed for linting the project
+        - nvm install node
+
+    - os: linux
+      rvm: 2.2.3
+      env: ATOM_CHANNEL=beta
+      before_install:
+        # Installed for linting the project
+        - nvm install node
+
+    - os: osx
+      rvm: 2.2.3
+      env: ATOM_CHANNEL=stable
+      before_install:
+        - brew update
+        # Installed for linting the project
+        - brew outdated node || brew upgrade node
 
 env:
-  matrix:
-    - ATOM_CHANNEL=stable
-    - ATOM_CHANNEL=beta
+  global:
+    - APM_TEST_PACKAGES=""
+    - ATOM_LINT_WITH_BUNDLED_NODE="false"
 
 install:
   - gem install scss_lint
 
 before_script:
   - scss-lint --version
+
+### Generic setup follows ###
 script: 'curl -s https://raw.githubusercontent.com/atom/ci/master/build-package.sh | sh'
 
 notifications:
   email:
     on_success: never
     on_failure: change
+
+branches:
+  only:
+    - master
 
 git:
   depth: 10
@@ -35,7 +60,3 @@ addons:
     - git
     - libgnome-keyring-dev
     - fakeroot
-
-branches:
-  only:
-    - master
