--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,16 +1,15 @@
-version: "{build}"
-
-platform: x64
-
+### Project specific config ###
 environment:
   APM_TEST_PACKAGES:
+  ATOM_LINT_WITH_BUNDLED_NODE: "false"
   RUBY_VERSION: 22-x64
   matrix:
     - ATOM_CHANNEL: stable
     - ATOM_CHANNEL: beta
 
 install:
-  - ps: Install-Product node 5
+  # Install Node.js to run any configured linters
+  - ps: Install-Product node 6
   - SET PATH=C:\Ruby%RUBY_VERSION%\bin;%PATH%
   - gem update --system
   - gem install scss_lint --no-document
@@ -19,6 +18,8 @@ before_build:
   - ruby --version
   - gem --version
   - scss-lint --version
+
+### Generic setup follows ###
 build_script:
   - ps: iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/atom/ci/master/build-package.ps1'))
 
@@ -26,5 +27,9 @@ branches:
   only:
     - master
 
-deploy: off
+version: "{build}"
+platform: x64
+clone_depth: 10
+skip_tags: true
 test: off
+deploy: off
