Allow disabling of execution timeout
Apparently `scss-lint` can take over 10s to run on large files, allow
users to disable the timeout if they are running on files that large.

--- a/package.json
+++ b/package.json
@@ -25,6 +25,12 @@
       "title": "Config Name",
       "type": "string",
       "default": ".scss-lint.yml"
+    },
+    "disableTimeout": {
+      "title": "Disable Execution Timeout",
+      "type": "boolean",
+      "default": false,
+      "description": "Exection of `scss-lint` times out after 10 seconds by default, this disables that timeout."
     }
   },
   "scripts": {
