feat: upgrade to linter API v2
Upgrade this provider to the v2 linter API so it can continue to work 
with newer versions of `linter`.

--- a/package.json
+++ b/package.json
@@ -51,12 +51,12 @@
     "jasmine-fix": "^1.3.0"
   },
   "package-deps": [
-    "linter"
+    "linter:2.0.0"
   ],
   "providedServices": {
     "linter": {
       "versions": {
-        "1.1.0": "provideLinter"
+        "2.0.0": "provideLinter"
       }
     }
   },
