build: add Renovate configuration
Add a configuration for the Renovate dependency management service.

--- a/package.json
+++ b/package.json
@@ -60,6 +60,11 @@
       }
     }
   },
+  "renovate": {
+    "extends": [
+      "config:base"
+    ]
+  },
   "eslintConfig": {
     "extends": "airbnb-base",
     "rules": {
