--- a/package.json
+++ b/package.json
@@ -41,8 +41,8 @@
     "atom": ">=1.4.0 <2.0.0"
   },
   "dependencies": {
-    "atom-linter": "~10.0.0",
-    "atom-package-deps": "^5.0.0"
+    "atom-linter": "10.0.0",
+    "atom-package-deps": "5.0.0"
   },
   "devDependencies": {
     "eslint": "5.13.0",
